@@ -4,6 +4,7 @@ releases are sorted from youngest to oldest.
 version <next>:
 - compand audio filter
 - shuffleplanes filter
+- bmp standalone parser
 
 
 version 10:
